# serial-communicator

./: Cargo.toml  build-aarch64-unknown-linux-gnu.sh  out  out.txt
.cargo/: config.toml
src/: build.rs  lib.rs  main.rs
src/util/: mod.rs  serial_helper.rs
tests/: local_test.rs
