[package]
name = "serial-communicator"
version = "0.1.1"
authors = ["Zhengyi Chen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2"
log = "0.4.17"
simple_logger = "4"

[simple_logger]
features = ["stderr"]
